// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menus component should match snapshot if loading is false 1`] = `
<div
  className="menu"
>
  <h2
    className="menuHeader"
  >
    ~ Menus for the day ~
  </h2>
  <MenuDisplay
    loggedIn={false}
    menus={Array []}
  />
</div>
`;

exports[`Menus component should match snapshot if loading is true 1`] = `
<div
  className="menu"
>
  <h2
    className="menuHeader"
  >
    ~ Menus for the day ~
  </h2>
  <Loader
    message="loading..."
    width={40}
  />
</div>
`;
